# Push002

./: .env.example  .replit  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted-You-are-an-AI-coding-assistant-The-project-is-GeoMindFlow-a-Smart-Tourist-Safety-System-with-Nex-1758801556629_1758801556629.txt  Pasted-You-are-an-AI-coding-assistant-The-project-is-GeoMindFlow-a-Smart-Tourist-Safety-System-with-Nex-1758819314848_1758819314848.txt  Pasted-You-are-an-expert-ML-Full-Stack-engineer-I-already-have-a-repo-called-GeoMindFlow-with-thi-1758799939402_1758799939403.txt  Pasted-You-are-an-expert-full-stack-AI-GIS-engineer-I-have-a-repo-called-Push002-Upgrade-it-to-a-r-1758817452698_1758817452698.txt  Pasted-You-are-an-expert-full-stack-ML-AI-GIS-engineer-Produce-a-complete-advanced-production-ready-pr-1758794899531_1758794899532.txt
client/src/: App.tsx  index.css
client/src/hooks/: use-websocket.ts  use-websocket.tsx
client/src/lib/: api-client.ts
client/src/pages/: alert-settings.tsx  reports.tsx  (+7 more)
docs/: ARCHITECTURE.md  DEMO.md
edge/: agent.py  mqtt_client.py
ml/: train.py
ml/models/: cnn_model.py  fusion_model.py  lstm_model.py
ml/utils/: data_processor.py  explainability.py  synthetic_data.py
server/: README_FASTAPI.md  requirements.txt  routes.ts  run_fastapi.py  storage.ts  test_fastapi.py
server/app/: __init__.py  main.py
server/services/: alert-service.ts  ml-service.ts  websocket-service.ts
shared/: schema.ts
(+28 files in other folders)
